created general function to prepare data for training. Trained and tested mlb3year model

--- a/mlb-predict.ipynb
+++ b/mlb-predict.ipynb
@@ -5785,7 +5785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "daa5d5ea",
    "metadata": {},
    "outputs": [],
@@ -5810,7 +5810,25 @@
     "          'home-last10-avg-strikeouts', 'away-last10-avg-strikeouts',\n",
     "          'home-starter-career-era', 'away-starter-career-era']\n",
     "\n",
-    "# order2 = [...]"
+    "order2 = ['did-home-win',\n",
+    "          'home-win-percentage', 'home-starter-season-era', \n",
+    "          'home-elo-probability', 'home-rating-probability', \n",
+    "          'home-starter-season-win-percentage', 'home-last10-avg-runs', \n",
+    "          'home-last10-avg-ops', 'home-last10-avg-runs-allowed', \n",
+    "          'home-starter-season-avg', 'home-elo-pregame', \n",
+    "          'home-pitcher-rgs', 'home-last10-avg-hits', \n",
+    "          'home-last10-avg-hits-allowed', 'home-last10-avg-obp', \n",
+    "          'home-rating-pregame', 'home-starter-season-runs-per9', \n",
+    "          'home-last10-avg-strikeouts', 'home-starter-career-era', \n",
+    "          'away-win-percentage', 'away-starter-season-era', \n",
+    "          'away-elo-probability', 'away-rating-probability',\n",
+    "          'away-starter-season-win-percentage', 'away-last10-avg-runs',\n",
+    "          'away-last10-avg-ops','away-last10-avg-runs-allowed', \n",
+    "          'away-starter-season-avg', 'away-elo-pregame',\n",
+    "          'away-pitcher-rgs', 'away-last10-avg-hits',\n",
+    "          'away-last10-avg-hits-allowed', 'away-last10-avg-obp',\n",
+    "          'away-rating-pregame', 'away-starter-season-runs-per9',\n",
+    "          'away-last10-avg-strikeouts', 'away-starter-career-era']"
    ]
   },
   {
@@ -7287,6 +7305,236 @@
     "Of the 12 or so predictions that I have made on this first day using the mlb2023 model, I have some observations. The most noticeable of which being that the actual numeric prediction ([0,1]) tends very heavily towards the boundaries (0 and 1). Many of the predictions were well below (0.01) and some of the positive (1) predictions were above 0.98 or so. As I haven't seen any of these games play out yet and evaluated the model on real future data, I can't yet truly comment on this, but it was interesting to note that only 2 of the 12 predictions I made were truly tending towards the center (0.318 and 0.365). \n",
     "\n",
     "The model has also made some bold predictions, betting against the sportsbooks on more than one of these games. Of the 12 game slate for tonight (07/14/2023), the model predicted upsets including... Rockies(+180) over the Yankees(-210), Guardians(+130) over the Rangers(-150), and Nationals(+150) over the Cardinals(-180). The other picks, were either aligned with the betting favorite or were games that didn't have a discernable favorite. As in the Mets game, there isn't a clear betting favorite (note: Urias vs. Verlander), but the model quite confidently believes in the Dodgers to win it. We shall see!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31b09a3a",
+   "metadata": {},
+   "source": [
+    "## Hopefully Improved Models & Generalized Data Preparation\n",
+    "From here on out, I am going to simplify the data preparation for training into a function so that I can easily mess around and train new models with the goal of surpassing the ~65% testing accuracy that my \"mlb2023\" model is able to achieve. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c8bfca1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "import pandas as pd        \n",
+    "import numpy as np\n",
+    "import pickle\n",
+    "import os\n",
+    "\n",
+    "def prepare_data(data_dirs, model_name, order=order2 save_dir=None, missing_data_threshold=10):\n",
+    "    \"\"\"\n",
+    "    Args:\n",
+    "        data_dirs: list of paths to folders with the .xlsx data sheets\n",
+    "        save_dir: file_path to save merged .xlsx sheet to if desired\n",
+    "            -> must end in .xlsx and be a valid (existing) file path\n",
+    "    \n",
+    "    Returns:\n",
+    "        x_train, x_test, y_train, y_test\n",
+    "    \"\"\"\n",
+    "    df = pd.DataFrame()\n",
+    "    # iterate through mlb data directory to retrieve each file\n",
+    "    for dir in data_dirs:\n",
+    "        for filename in os.listdir(dir):\n",
+    "            if filename.endswith('.xlsx'):\n",
+    "                path = os.path.join(dir, filename)\n",
+    "                d = pd.read_excel(path)\n",
+    "                df = pd.concat([df, d], ignore_index=True)\n",
+    "    if save_dir:\n",
+    "        df.to_excel(save_dir)\n",
+    "    \n",
+    "    # remove the game-id, date, home/away team features\n",
+    "    df.drop(columns=['game-id', 'date', 'home-team', 'away-team'], inplace=True)\n",
+    "    # drops rows with missing labels\n",
+    "    df = df.dropna(subset=['did-home-win'])\n",
+    "    # convert 'did-home-win' labels to binary values\n",
+    "    df['did-home-win'] = df['did-home-win'].astype(int)\n",
+    "    \n",
+    "    df = df[order]\n",
+    "    \n",
+    "    df = df.dropna(thresh=df.shape[1] - missing_data_threshold)\n",
+    "    \n",
+    "    scaler = MinMaxScaler()\n",
+    "    # scale all columns that don't represent averages between 0-1 (i.e. batting avg doesn't need scaling)\n",
+    "    columns_to_scale = ['home-starter-season-era', 'away-starter-season-era',\n",
+    "                       'home-last10-avg-runs', 'away-last10-avg-runs',\n",
+    "                       'home-last10-avg-runs-allowed', 'away-last10-avg-runs-allowed', \n",
+    "                       'home-elo-pregame', 'away-elo-pregame',\n",
+    "                       'home-pitcher-rgs', 'away-pitcher-rgs',\n",
+    "                       'home-last10-avg-hits', 'away-last10-avg-hits',\n",
+    "                       'home-last10-avg-hits-allowed', 'away-last10-avg-hits-allowed',\n",
+    "                       'home-rating-pregame', 'away-rating-pregame',\n",
+    "                       'home-starter-season-runs-per9', 'away-starter-season-runs-per9',\n",
+    "                       'home-last10-avg-strikeouts', 'away-last10-avg-strikeouts',\n",
+    "                       'home-starter-career-era', 'away-starter-career-era']\n",
+    "    # apply min-max normalization to selected features\n",
+    "    df[columns_to_scale] = scaler.fit_transform(df[columns_to_scale])\n",
+    "    scaler_path = 'models/scalers/'\n",
+    "    with open(scaler_path + model_name + '_scaler.pkl', 'wb') as file:\n",
+    "        pickle.dump(scaler, file)\n",
+    "\n",
+    "    # randomize the order of the rows in the dataframe\n",
+    "    df = df.sample(frac=1).reset_index(drop=True)\n",
+    "    # separate labels from the features\n",
+    "    features = df.drop('did-home-win', axis=1).values\n",
+    "    labels = df['did-home-win'].values\n",
+    "    # verify shapes features and labels\n",
+    "    print(\"Features shape: \", df.shape)\n",
+    "    print(\"Labels shape: \", df.shape)\n",
+    "    indices = list(range(len(features)))\n",
+    "    split_index = int(0.85 * len(features))\n",
+    "    train_indices = indices[:split_index]\n",
+    "    test_indices  = indices[split_index:]\n",
+    "    x_train = features[train_indices]\n",
+    "    x_test  = features[test_indices ]\n",
+    "    y_train = labels[train_indices]\n",
+    "    y_test  = labels[test_indices ]\n",
+    "    # verify shapes of training/testing sets\n",
+    "    print(\"Training set shape: \", x_train.shape, y_train.shape)\n",
+    "    print(\"Testing set shape: \" , x_test.shape,  y_test.shape )\n",
+    "    return x_train, x_test, y_train, y_test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf21fab2",
+   "metadata": {},
+   "source": [
+    "## MLB 3 Year\n",
+    "Using the data_retrieval.py script, I collected game data from 2021-2023 seasons in the background and I'm going to pull that data and use it to train a model. The data is from every MLB game during these 3 season (2023 cutoff is 07/09). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "5a721237",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Features shape:  (5975, 37)\n",
+      "Labels shape:  (5975, 37)\n",
+      "Training set shape:  (5078, 36) (5078,)\n",
+      "Testing set shape:  (897, 36) (897,)\n",
+      "[LightGBM] [Info] Number of positive: 2709, number of negative: 2369\n",
+      "[LightGBM] [Warning] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000532 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Total Bins 8532\n",
+      "[LightGBM] [Info] Number of data points in the train set: 5078, number of used features: 36\n",
+      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.533478 -> initscore=0.134112\n",
+      "[LightGBM] [Info] Start training from score 0.134112\n",
+      "Accuracy: 0.6376811594202898\n"
+     ]
+    }
+   ],
+   "source": [
+    "import lightgbm as lgb\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "data = ['data/seasons/2021', 'data/seasons/2022', 'data/seasons/2023']\n",
+    "x_train, x_test, y_train, y_test = prepare_data(data_dirs=data, model_name=\"mlb3year\", order=order2, missing_data_threshold=10)\n",
+    "\n",
+    "# model parameters \n",
+    "params = {\n",
+    "    'objective': 'binary',\n",
+    "    'metric': 'accuracy',\n",
+    "    'boosting_type': 'gbdt',\n",
+    "    'num_leaves': 31,\n",
+    "    'learning_rate': 0.05,\n",
+    "}\n",
+    "\n",
+    "data = lgb.Dataset(x_train, label=y_train)\n",
+    "\n",
+    "model = lgb.train(params, data, num_boost_round=1000)\n",
+    "model.save_model('models/mlb3year.txt')\n",
+    "\n",
+    "y_pred = model.predict(x_test)\n",
+    "y_pred_binary = (y_pred > 0.5).astype(int)\n",
+    "accuracy = accuracy_score(y_test, y_pred_binary)\n",
+    "\n",
+    "print('Accuracy:', accuracy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3f3bc64",
+   "metadata": {},
+   "source": [
+    "## Testing different feature orders\n",
+    "In the past 3 models, I've used \"order1\" which creates direct comparisons between adjacent features by placing a home team's statistic directly next to the away team's same stat. Here I will try a different order, primarily the order where I place all of one team's statistics first and then the other team's after. Below I will use the same data as ***mlb3year***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "0b5c43f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Features shape:  (5975, 37)\n",
+      "Labels shape:  (5975, 37)\n",
+      "Training set shape:  (5078, 36) (5078,)\n",
+      "Testing set shape:  (897, 36) (897,)\n",
+      "[LightGBM] [Info] Number of positive: 2727, number of negative: 2351\n",
+      "[LightGBM] [Warning] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000804 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Total Bins 8551\n",
+      "[LightGBM] [Info] Number of data points in the train set: 5078, number of used features: 36\n",
+      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.537022 -> initscore=0.148361\n",
+      "[LightGBM] [Info] Start training from score 0.148361\n",
+      "Accuracy: 0.6432552954292085\n"
+     ]
+    }
+   ],
+   "source": [
+    "import lightgbm as lgb\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "data = ['data/seasons/2021', 'data/seasons/2022', 'data/seasons/2023']\n",
+    "x_train, x_test, y_train, y_test = prepare_data(data_dirs=data, model_name=\"mlb3year_test\", order=order2, missing_data_threshold=10)\n",
+    "\n",
+    "# model parameters \n",
+    "params = {\n",
+    "    'objective': 'binary',\n",
+    "    'metric': 'accuracy',\n",
+    "    'boosting_type': 'gbdt',\n",
+    "    'num_leaves': 31,\n",
+    "    'learning_rate': 0.05,\n",
+    "}\n",
+    "\n",
+    "data = lgb.Dataset(x_train, label=y_train)\n",
+    "\n",
+    "model = lgb.train(params, data, num_boost_round=1000)\n",
+    "model.save_model('models/mlb3year_test.txt')\n",
+    "\n",
+    "y_pred = model.predict(x_test)\n",
+    "y_pred_binary = (y_pred > 0.5).astype(int)\n",
+    "accuracy = accuracy_score(y_test, y_pred_binary)\n",
+    "\n",
+    "print('Accuracy:', accuracy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "608b829b",
+   "metadata": {},
+   "source": [
+    "### Remarks\n",
+    "After training the model a couple times with \"order2\", it appears that the order doesn't make a significant impact on the model's testing accuracy. If anything, however, I've noticed that the training accuracies were on average a little bit higher. Moving forward, I will use order2 as the default feature order. \n",
+    "\n",
+    "Additionally, I will retrain the official mlb3year model with order2, so that the saved model is up to date.  "
    ]
   }
  ],
