trained new mlb4year model using new feature blend (no ELO stats)

--- a/mlb-predict.ipynb
+++ b/mlb-predict.ipynb
@@ -16,11 +16,7 @@
     "* prepare the data for training (i.e. strip unnecessary features)\n",
     "* divide data into testing and training sets\n",
     "* fine tune an existing gradient boosting framework\n",
-    "* tune hyperparameters to get best model and then save model weights\n",
-    "* make predictions!\n",
-    "\n",
-    "#### *Note for viewers*\n",
-    "There are some lines which I commented out and then re-executed as to remove large chunks of non-hideable code for when viewing on github.com. These are all noted, but generally occur during training of the model (hides excessive prints of training status during each iteration) and when collecting data (hides per game print statement indicating successful collection)"
+    "* tune hyperparameters to get best model and then save model weights"
    ]
   },
   {
@@ -64,7 +60,7 @@
    "source": [
     "## Example Data Preparation and Model Training\n",
     "\n",
-    "The code below shows the steps for preparing data for training and how I would train a model. It is not fully executable due to missing file paths and data etc. This is just used to show the steps that I take and which I eventually consolidate in the prepare_data function. Below the definition of prepare_data begins the actual training for various models including the discontinued  mlb3year model and my new mlb5year model. "
+    "The code below shows the steps for preparing data for training and how I would train a model. It is not fully executable due to missing file paths and data etc. This is just used to show the steps that I take and which I eventually consolidate in the prepare_data function. Below the definition of prepare_data begins the actual training for various models including the discontinued  mlb3year model and my new mlb4year model. "
    ]
   },
   {
@@ -144,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "daa5d5ea",
    "metadata": {},
    "outputs": [],
@@ -162,11 +158,11 @@
     "    \"home-last10-avg-runs-allowed\", \"away-last10-avg-runs-allowed\",\n",
     "    \"home-starter-season-avg\", \"away-starter-season-avg\",\n",
     "    \"home-top5-batting-avg\", \"away-top5-batting-avg\",\n",
-    "    \"home-starter-season-strike_percentage\", \"away-starter-season-strike-percentage\",\n",
+    "    \"home-starter-season-strike-percentage\", \"away-starter-season-strike-percentage\",\n",
     "    \"home-last10-avg-hits\", \"away-last10-avg-hits\",\n",
     "    \"home-last10-avg-hits-allowed\", \"away-last10-avg-hits-allowed\",\n",
     "    \"home-last10-avg-obp\", \"away-last10-avg-obp\",\n",
-    "    \"home-last10-avg-avg\", \"away-lat10-avg-avg\",\n",
+    "    \"home-last10-avg-avg\", \"away-last10-avg-avg\",\n",
     "    \"home-last10-avg-rbi\", \"away-last10-avg-rbi\",\n",
     "    \"home-starter-season-runs-per9\", \"away-starter-season-runs-per9\",\n",
     "    \"home-top5-stolenBases-avg\", \"away-top5-stolenBases-avg\",\n",
@@ -182,7 +178,7 @@
     "    \"home-last10-avg-runs\", \"home-last10-avg-ops\",\n",
     "    \"home-starter-season-whip\", \"home-top5-rbi-avg\",\n",
     "    \"home-last10-avg-runs-allowed\", \"home-starter-season-avg\",\n",
-    "    \"home-top5-batting-avg\", \"home-starter-season-strike_percentage\",\n",
+    "    \"home-top5-batting-avg\", \"home-starter-season-strike-percentage\",\n",
     "    \"home-last10-avg-hits\", \"home-last10-avg-hits-allowed\",\n",
     "    \"home-last10-avg-obp\", \"home-last10-avg-avg\",\n",
     "    \"home-last10-avg-rbi\", \"home-starter-season-runs-per9\",\n",
@@ -195,7 +191,7 @@
     "    \"away-last10-avg-runs-allowed\", \"away-starter-season-avg\",\n",
     "    \"away-top5-batting-avg\", \"away-starter-season-strike-percentage\",\n",
     "    \"away-last10-avg-hits\", \"away-last10-avg-hits-allowed\",\n",
-    "    \"away-last10-avg-obp\", \"away-lat10-avg-avg\",\n",
+    "    \"away-last10-avg-obp\", \"away-last10-avg-avg\",\n",
     "    \"away-last10-avg-rbi\", \"away-starter-season-runs-per9\",\n",
     "    \"away-top5-stolenBases-avg\", \"away-top5-totalBases-avg\",\n",
     "    \"away-last10-avg-strikeouts\", \"away-starter-career-era\",\n",
@@ -262,7 +258,7 @@
    "source": [
     "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
-    "scaler  = MinMaxScaler()"
+    "scaler = MinMaxScaler()"
    ]
   },
   {
@@ -333,7 +329,7 @@
    "metadata": {},
    "source": [
     "## Building the model\n",
-    "Using LightGBM model"
+    "Using LightGBM model and defining parameters"
    ]
   },
   {
@@ -354,14 +350,6 @@
     "    'num_leaves': 31,\n",
     "    'learning_rate': 0.05,\n",
     "}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "85a64baf",
-   "metadata": {},
-   "source": [
-    "***MLB***"
    ]
   },
   {
@@ -400,7 +388,7 @@
    "metadata": {},
    "source": [
     "## Testing the model\n",
-    "Here I test the models' accuracy on its testing set. "
+    "Here I would test the models' accuracy on its testing set. "
    ]
   },
   {
@@ -441,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "c8bfca1e",
    "metadata": {},
    "outputs": [],
@@ -460,6 +448,7 @@
     "        order: order of the data features used for training \n",
     "        save_dir: file_path to save merged .xlsx sheet to if desired\n",
     "            -> must end in .xlsx and be a valid (existing) file path\n",
+    "        missing_data_threshold: max number of acceptable missing features in training sample\n",
     "    \n",
     "    Returns:\n",
     "        x_train, x_test, y_train, y_test\n",
@@ -495,7 +484,7 @@
     "    scaler_path = 'models/scalers/'\n",
     "    with open(scaler_path + model_name + '_scaler.pkl', 'wb') as file:\n",
     "        pickle.dump(scaler, file)\n",
-    "    features = df.values\n",
+    "    features = df\n",
     "    # verify shapes features and labels\n",
     "    print(\"Features shape: \", df.shape)\n",
     "    print(\"Labels shape: \", df.shape)\n",
@@ -578,7 +567,12 @@
     "from sklearn.metrics import accuracy_score\n",
     "\n",
     "data = ['data/seasons/2021', 'data/seasons/2022', 'data/seasons/2023']\n",
-    "x_train, x_test, y_train, y_test = prepare_data(data_dirs=data, model_name=\"mlb3year_test\", order=order2, missing_data_threshold=10)\n",
+    "x_train, x_test, y_train, y_test = prepare_data(\n",
+    "    data_dirs=data, \n",
+    "    model_name=\"mlb3year_test\", \n",
+    "    order=order2, \n",
+    "    missing_data_threshold=10\n",
+    ")\n",
     "\n",
     "# model parameters \n",
     "params = {\n",
@@ -606,20 +600,31 @@
    "id": "e1971418",
    "metadata": {},
    "source": [
-    "Original return... \n",
+    "Return from code above...\n",
     "\n",
-    "`Features shape:  (5975, 37)\n",
-    "Labels shape:  (5975, 37)\n",
-    "Training set shape:  (5078, 36) (5078,)\n",
-    "Testing set shape:  (897, 36) (897,)\n",
-    "[LightGBM] [Info] Number of positive: 2727, number of negative: 2351\n",
-    "[LightGBM] [Warning] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000804 seconds.\n",
-    "You can set `force_col_wise=true` to remove the overhead.\n",
-    "[LightGBM] [Info] Total Bins 8551\n",
-    "[LightGBM] [Info] Number of data points in the train set: 5078, number of used features: 36\n",
-    "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.537022 -> initscore=0.148361\n",
-    "[LightGBM] [Info] Start training from score 0.148361\n",
-    "Accuracy: 0.6432552954292085`"
+    "`Features shape:  (5975, 37)`\n",
+    "\n",
+    "`Labels shape:  (5975, 37)`\n",
+    "\n",
+    "`Training set shape:  (5078, 36) (5078,)`\n",
+    "\n",
+    "`Testing set shape:  (897, 36) (897,)`\n",
+    "\n",
+    "`[LightGBM] [Info] Number of positive: 2727, number of negative: 2351`\n",
+    "\n",
+    "`[LightGBM] [Warning] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000804 seconds.`\n",
+    "\n",
+    "`You can set force_col_wise=true to remove the overhead.`\n",
+    "\n",
+    "`[LightGBM] [Info] Total Bins 8551`\n",
+    "\n",
+    "`[LightGBM] [Info] Number of data points in the train set: 5078, number of used features: 36`\n",
+    "\n",
+    "`[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.537022 -> initscore=0.148361`\n",
+    "\n",
+    "`[LightGBM] [Info] Start training from score 0.148361`\n",
+    "\n",
+    "`Accuracy: 0.6432552954292085`"
    ]
   },
   {
@@ -638,43 +643,103 @@
    "id": "bc495f34",
    "metadata": {},
    "source": [
-    "## MLB 5 Year"
+    "## MLB 4 Year\n",
+    "\n",
+    "This model is the first model to use my new data blend that *does not* longer include ELO statistics."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "97bc9bc3",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import lightgbm as lgb\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
-    "data = ['data/seasons/2019', 'data/seasons/2020', \n",
-    "        'data/seasons/2021', 'data/seasons/2022', \n",
-    "        'data/seasons/2023']\n",
-    "x_train, x_test, y_train, y_test = prepare_data(data_dirs=data, model_name=\"mlb5year\", order=order2, missing_data_threshold=10)\n",
+    "data = ['data/seasons/2020', 'data/seasons/2021', \n",
+    "        'data/seasons/2022', 'data/seasons/2023']\n",
+    "x_train, x_test, y_train, y_test = prepare_data(\n",
+    "    data_dirs=data, \n",
+    "    model_name=\"mlb4year\", \n",
+    "    order=order2, \n",
+    "    missing_data_threshold=10\n",
+    ")\n",
     "\n",
     "# model parameters \n",
     "params = {\n",
     "    'objective': 'binary',\n",
     "    'metric': 'accuracy',\n",
     "    'boosting_type': 'gbdt',\n",
-    "    'num_leaves': 31,\n",
-    "    'learning_rate': 0.05,\n",
+    "    'num_leaves': 128,\n",
+    "    'learning_rate': 0.005,\n",
+    "    'tree_learner': 'serial',\n",
+    "    'min_data_in_leaf': 20,\n",
+    "    'feature_fraction': 0.8,\n",
+    "    'bagging_fraction': 0.8,\n",
+    "    'bagging_freq': 5,\n",
+    "    'lambda_l1': 0.1,\n",
+    "    'lambda_l2': 0.1,\n",
+    "    'scale_pos_weight': 1.0,\n",
     "}\n",
     "\n",
     "data = lgb.Dataset(x_train, label=y_train)\n",
     "\n",
-    "model = lgb.train(params, data, num_boost_round=1000)\n",
-    "model.save_model('models/mlb5year.txt')\n",
+    "model = lgb.train(params, data, num_boost_round=500)\n",
+    "model.save_model('models/mlb4year.txt')\n",
     "\n",
     "y_pred = model.predict(x_test)\n",
     "y_pred_binary = (y_pred > 0.5).astype(int)\n",
     "accuracy = accuracy_score(y_test, y_pred_binary)\n",
     "\n",
     "print('Accuracy:', accuracy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31fed0e3",
+   "metadata": {},
+   "source": [
+    "Return from code above...\n",
+    "\n",
+    "`Features shape:  (7406, 44)`\n",
+    "\n",
+    "`Labels shape:  (7406, 44)`\n",
+    "\n",
+    "`Training set shape:  (6295, 44) (6295,)`\n",
+    "\n",
+    "`Testing set shape:  (1111, 44) (1111,)`\n",
+    "\n",
+    "`[LightGBM] [Info] Number of positive: 3355, number of negative: 2940`\n",
+    "\n",
+    "`[LightGBM] [Warning] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000666 seconds.`\n",
+    "\n",
+    "`You can set force_col_wise=true to remove the overhead.`\n",
+    "\n",
+    "`[LightGBM] [Info] Total Bins 8318`\n",
+    "\n",
+    "`[LightGBM] [Info] Number of data points in the train set: 6295, number of used features: 44`\n",
+    "\n",
+    "`[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.532963 -> initscore=0.132042`\n",
+    "\n",
+    "`[LightGBM] [Info] Start training from score 0.132042`\n",
+    "\n",
+    "`Accuracy: 0.6552655265526552`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77441068",
+   "metadata": {},
+   "source": [
+    "## Results of MLB 4 Year \n",
+    "\n",
+    "I am pleased to see that the accuracy has not worsened as a result of my transition away from ELO statistics. My new blend of data features in each sample includes more features that attempt to measure a team's current and season-long momentum and this was meant to supplement the ELO statistics. \n",
+    "\n",
+    "Additionally, I spent more time tuning the model's hyper parameters and this resulted in a more consistent and higher accuracy. "
    ]
   }
  ],
